--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand hidden-lg hidden-md hidden-sm visible-xs" href="#">Brand</a>
+                <a class="navbar-brand hidden-lg hidden-md hidden-sm visible-xs" href="#">Main Menu</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
