--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="col-md-2">
                     <div class="brand">
-                        <h2>Aycosa</h2>
+                        <h2>Samra</h2>
                     </div>
                 </div>
                 <div class="col-md-8">
